<resources>
    <string name="app_name">Fragment Navigation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="user_profile">User Profile</string>
    <string name="user_id">User ID</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="send_data">Send data</string>
    <string name="user_details">User Details</string>
    <string name="home">Home</string>
</resources>