<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingTop="15dp"
    android:paddingHorizontal="20dp">


    <TextView
        android:id="@+id/tv_profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_profile"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_title" />

    <EditText
        android:id="@+id/edit_text_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_user_id"
        app:layout_constraintStart_toStartOf="@+id/edit_text_user_id"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_user_id" />

    <EditText
        android:id="@+id/edit_text_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_user_name"
        app:layout_constraintStart_toStartOf="@+id/edit_text_user_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_user_name" />

    <Button
        android:id="@+id/btn_send_data_profile_to_about"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/send_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_user_email" />

    <Button
        android:id="@+id/btn_profile_to_home"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="home"
        app:layout_constraintEnd_toEndOf="@+id/btn_send_data_profile_to_about"
        app:layout_constraintStart_toStartOf="@+id/btn_send_data_profile_to_about"
        app:layout_constraintTop_toBottomOf="@+id/btn_send_data_profile_to_about" />


</androidx.constraintlayout.widget.ConstraintLayout>